First steps... it kind of works

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -26,6 +26,9 @@
   "allow": "Consenti",
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
+  "connect": "Connetti",
+  "continue": "Continua",
+  "continue_after_connect": "Continua dopo la connessione",
   "already-have-an-account": "Hai già un account?",
   "analytics": "Statistiche uso",
   "anthropic_backend": "Anthropic",
@@ -297,6 +300,7 @@
   "manage-members": "Gestisci membri",
   "markdown": "Markdown",
   "mcp-sse-endpoint-placeholder": "Inserisci l'endpoint MCP SSE",
+  "mcp_auth_required": "Questo strumento richiede la connessione del tuo account MCP.",
   "medium": "Medio",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
@@ -341,6 +345,13 @@
   "no_users_found": "Nessun utente trovato",
   "none": "Nessuno",
   "not_authenticated": "Non autenticato",
+  "oauth": "OAuth",
+  "authorization_url": "URL di autorizzazione",
+  "oauth_resource_metadata_url": "URL dei metadati della risorsa protetta",
+  "token_url": "URL del token",
+  "client_id": "ID client",
+  "client_secret": "Segreto client",
+  "scopes": "Ambiti",
   "obsolete": "Obsolete",
   "oidc": "OIDC",
   "ok": "Ok",
