--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -26,6 +26,9 @@
   "allow": "Allow",
   "allow-only-work-email": "Please use your work email to create an account.",
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
+  "connect": "Connect",
+  "continue": "Continue",
+  "continue_after_connect": "Continue after connect",
   "already-have-an-account": "Already have an account?",
   "analytics": "Analytics",
   "anthropic_backend": "Anthropic",
@@ -297,6 +300,7 @@
   "manage-members": "Manage members",
   "markdown": "Markdown",
   "mcp-sse-endpoint-placeholder": "Enter the MCP SSE endpoint",
+  "mcp_auth_required": "This tool requires you to connect your MCP account.",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
@@ -341,6 +345,13 @@
   "no_users_found": "No users found",
   "none": "None",
   "not_authenticated": "Not authenticated",
+  "oauth": "OAuth",
+  "authorization_url": "Authorization URL",
+  "oauth_resource_metadata_url": "Protected Resource Metadata URL",
+  "token_url": "Token URL",
+  "client_id": "Client ID",
+  "client_secret": "Client Secret",
+  "scopes": "Scopes",
   "obsolete": "Obsolete",
   "oidc": "OIDC",
   "ok": "Ok",
