--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -301,6 +301,7 @@
   "markdown": "Markdown",
   "mcp-sse-endpoint-placeholder": "Enter the MCP SSE endpoint",
   "mcp_auth_required": "This tool requires you to connect your MCP account.",
+  "mcp_auth_connected": "MCP account connected. You can continue.",
   "mcp_prefer_top_level_navigation_label": "Use full-page navigation for OAuth",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
