--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -302,6 +302,9 @@
   "mcp-sse-endpoint-placeholder": "Enter the MCP SSE endpoint",
   "mcp_auth_required": "This tool requires you to connect your MCP account.",
   "mcp_auth_connected": "MCP account connected. You can continue.",
+  "mcp_auth_activation_mode_label": "Authorization mode",
+  "mcp_auth_activation_mode_preflight": "Preflight (prompt before use)",
+  "mcp_auth_activation_mode_lazy": "Lazy (enable tool call)",
   "mcp_prefer_top_level_navigation_label": "Use full-page navigation for OAuth",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
