Move tool secrets to dedicated table

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -306,6 +306,12 @@
   "mcp_auth_activation_mode_preflight": "Preflight (prompt before use)",
   "mcp_auth_activation_mode_lazy": "Lazy (enable tool call)",
   "mcp_prefer_top_level_navigation_label": "Use full-page navigation for OAuth",
+  "secret_editor_stored_secret": "Stored secret",
+  "secret_editor_from_env": "From environment",
+  "secret_editor_set_secret": "Set secret",
+  "secret_editor_new_value": "New value",
+  "secret_editor_cancel": "Cancel",
+  "secret_editor_save": "Save",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
