--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -306,6 +306,12 @@
   "mcp_auth_activation_mode_preflight": "Preflight (richiesta prima dell'uso)",
   "mcp_auth_activation_mode_lazy": "Lazy (chiamata enable)",
   "mcp_prefer_top_level_navigation_label": "Usa navigazione a pagina intera per OAuth",
+  "secret_editor_stored_secret": "Segreto salvato",
+  "secret_editor_from_env": "Da ambiente",
+  "secret_editor_set_secret": "Imposta segreto",
+  "secret_editor_new_value": "Nuovo valore",
+  "secret_editor_cancel": "Annulla",
+  "secret_editor_save": "Salva",
   "medium": "Medio",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
