--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -279,6 +279,7 @@
   "invalid_value_email": "Invalid email",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "invocation_of_tool": "Invocation of tool",
+  "label": "Label",
   "knowledge": "Knowledge",
   "language": "Language",
   "last-12-months": "Last 12 months",
@@ -500,6 +501,7 @@
   "sso-connection-successfully-updated": "SSO connection has been successfully updated",
   "sso_user": "SSO User",
   "start_from_here": "Start from here",
+  "status": "Status",
   "submit": "Submit",
   "successfully-joined": "You have successfully joined the workspace.",
   "successfully-subscribed": "You have successfully subscribed.",
