--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -279,6 +279,7 @@
   "invalid_value_email": "Indirizzo email non valido",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
+  "label": "Etichetta",
   "knowledge": "Conoscenza",
   "language": "Lingua",
   "last-12-months": "Ultimi 12 mesi",
@@ -500,6 +501,7 @@
   "sso-connection-successfully-updated": "Connessione SSO modificata con successo",
   "sso_user": "Utente SSO",
   "start_from_here": "Inizia da qui",
+  "status": "Stato",
   "submit": "Invia",
   "successfully-joined": "Sei entrato con successo nel workspace.",
   "successfully-subscribed": "Ti sei iscritto con successo.",
