Feat: oauth authentication for mcp tools (#734)

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -26,6 +26,9 @@
   "allow": "Allow",
   "allow-only-work-email": "Please use your work email to create an account.",
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
+  "connect": "Connect",
+  "continue": "Continue",
+  "continue_after_connect": "Continue after connect",
   "already-have-an-account": "Already have an account?",
   "analytics": "Analytics",
   "anthropic_backend": "Anthropic",
@@ -276,6 +279,7 @@
   "invalid_value_email": "Invalid email",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "invocation_of_tool": "Invocation of tool",
+  "label": "Label",
   "knowledge": "Knowledge",
   "language": "Language",
   "last-12-months": "Last 12 months",
@@ -297,6 +301,18 @@
   "manage-members": "Manage members",
   "markdown": "Markdown",
   "mcp-sse-endpoint-placeholder": "Enter the MCP SSE endpoint",
+  "mcp_auth_required": "This tool requires you to connect your MCP account.",
+  "mcp_auth_connected": "MCP account connected. You can continue.",
+  "mcp_auth_activation_mode_label": "Authorization mode",
+  "mcp_auth_activation_mode_preflight": "Preflight (prompt before use)",
+  "mcp_auth_activation_mode_lazy": "Lazy (enable tool call)",
+  "mcp_prefer_top_level_navigation_label": "Use full-page navigation for OAuth",
+  "secret_editor_stored_secret": "Stored secret",
+  "secret_editor_from_env": "From environment",
+  "secret_editor_set_secret": "Set secret",
+  "secret_editor_new_value": "New value",
+  "secret_editor_cancel": "Cancel",
+  "secret_editor_save": "Save",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
@@ -341,6 +357,13 @@
   "no_users_found": "No users found",
   "none": "None",
   "not_authenticated": "Not authenticated",
+  "oauth": "OAuth",
+  "authorization_url": "Authorization URL",
+  "oauth_resource_metadata_url": "Protected Resource Metadata URL",
+  "token_url": "Token URL",
+  "client_id": "Client ID",
+  "client_secret": "Client Secret",
+  "scopes": "Scopes",
   "obsolete": "Obsolete",
   "oidc": "OIDC",
   "ok": "Ok",
@@ -478,6 +501,7 @@
   "sso-connection-successfully-updated": "SSO connection has been successfully updated",
   "sso_user": "SSO User",
   "start_from_here": "Start from here",
+  "status": "Status",
   "submit": "Submit",
   "successfully-joined": "You have successfully joined the workspace.",
   "successfully-subscribed": "You have successfully subscribed.",
