--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -26,6 +26,9 @@
   "allow": "Consenti",
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
+  "connect": "Connetti",
+  "continue": "Continua",
+  "continue_after_connect": "Continua dopo la connessione",
   "already-have-an-account": "Hai già un account?",
   "analytics": "Statistiche uso",
   "anthropic_backend": "Anthropic",
@@ -276,6 +279,7 @@
   "invalid_value_email": "Indirizzo email non valido",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
+  "label": "Etichetta",
   "knowledge": "Conoscenza",
   "language": "Lingua",
   "last-12-months": "Ultimi 12 mesi",
@@ -297,6 +301,18 @@
   "manage-members": "Gestisci membri",
   "markdown": "Markdown",
   "mcp-sse-endpoint-placeholder": "Inserisci l'endpoint MCP SSE",
+  "mcp_auth_required": "Questo strumento richiede la connessione del tuo account MCP.",
+  "mcp_auth_connected": "Account MCP connesso. Puoi continuare.",
+  "mcp_auth_activation_mode_label": "Modalità di autorizzazione",
+  "mcp_auth_activation_mode_preflight": "Preflight (richiesta prima dell'uso)",
+  "mcp_auth_activation_mode_lazy": "Lazy (chiamata enable)",
+  "mcp_prefer_top_level_navigation_label": "Usa navigazione a pagina intera per OAuth",
+  "secret_editor_stored_secret": "Segreto salvato",
+  "secret_editor_from_env": "Da ambiente",
+  "secret_editor_set_secret": "Imposta segreto",
+  "secret_editor_new_value": "Nuovo valore",
+  "secret_editor_cancel": "Annulla",
+  "secret_editor_save": "Salva",
   "medium": "Medio",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
@@ -341,6 +357,13 @@
   "no_users_found": "Nessun utente trovato",
   "none": "Nessuno",
   "not_authenticated": "Non autenticato",
+  "oauth": "OAuth",
+  "authorization_url": "URL di autorizzazione",
+  "oauth_resource_metadata_url": "URL dei metadati della risorsa protetta",
+  "token_url": "URL del token",
+  "client_id": "ID client",
+  "client_secret": "Segreto client",
+  "scopes": "Ambiti",
   "obsolete": "Obsolete",
   "oidc": "OIDC",
   "ok": "Ok",
@@ -478,6 +501,7 @@
   "sso-connection-successfully-updated": "Connessione SSO modificata con successo",
   "sso_user": "Utente SSO",
   "start_from_here": "Inizia da qui",
+  "status": "Stato",
   "submit": "Invia",
   "successfully-joined": "Sei entrato con successo nel workspace.",
   "successfully-subscribed": "Ti sei iscritto con successo.",
