--- a/logicle/locales/en/tools.json
+++ b/logicle/locales/en/tools.json
@@ -5,6 +5,7 @@
   "mcp": "Mcp",
   "mcp_sse_endpoint_placeholder": "Mcp sse endpoint...",
   "openapi": "OpenAPI",
+  "isolated-vm": "Isolated VM",
   "timeofday": "Time of day",
   "websearch": "Web search"
 }
